--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,43 @@
   @tailwind components;
   @tailwind utilities;
 
+  @font-face {
+    font-family: "Poppins-Black";
+    src: url("/src/assets/fonts/Poppins-Black.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("/src/assets/fonts/Poppins-Bold.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-ExtraBold";
+    src: url("/src/assets/fonts/Poppins-ExtraBold.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-ExtraLight";
+    src: url("/src/assets/fonts/Poppins-ExtraLight.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-Light";
+    src: url("/src/assets/fonts/Poppins-Light.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("/src/assets/fonts/Poppins-Medium.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-Regular";
+    src: url("/src/assets/fonts/Poppins-Regular.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-SemiBold";
+    src: url("/src/assets/fonts/Poppins-SemiBold.ttf") format("truetype"); 
+  }
+  @font-face {
+    font-family: "Poppins-Thin";
+    src: url("/src/assets/fonts/Poppins-Thin.ttf") format("truetype"); 
+  }
+
   @layer base {
     :root {
       --background: 0 0% 100%;
