--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(1, 1, 1, 0.1);
+    /* background-color: rgba(0, 0, 0, 0.1); */
     backdrop-filter: blur(2px); 
     display: flex;
     justify-content: center;
@@ -265,3 +265,5 @@
       background-color: transparent;
     }
   }
+      
+     
